# zigy

./: .gitignore  CHANGELOG.md  MACOS_BUILD.md  PLAN_WINDOWS_MICROPHONE_FIX.md  README.md
.github/workflows/: claude.yml  deploy-site.yml  release.yml
docs/: astro.config.mjs  package-lock.json
docs/src/components/: Demo.astro  Features.astro  Footer.astro  Header.astro  Hero.astro  Installation.astro  LanguageSwitcher.astro  MacOSTroubleshooting.astro  SupportForm.astro  Team.astro
docs/src/i18n/: languages.ts  utils.ts
docs/src/i18n/translations/: en.ts  vi.ts
docs/src/layouts/: Layout.astro
docs/src/pages/: index.astro
docs/src/pages/troubleshooting/: macos.astro
docs/src/pages/vi/: index.astro
docs/src/pages/vi/troubleshooting/: macos.astro
zig-april-captions/: .gitignore  README.md  TODO.md  build.zig
zig-april-captions-ui/: .gitignore  BUILD_MACOS.md  CHANGELOG.md  INSTALLATION_MACOS.md  LICENSE  MACOS_FIX_SUMMARY.md  MACOS_SIGNING.md  README.md  RELEASE_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
zig-april-captions-ui/.github/workflows/: release-macos.yml  release.yml
zig-april-captions-ui/src/: App.css  App.tsx  main.tsx  tailwind.css  translations.ts
zig-april-captions-ui/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  captions-2025-12-06.txt  captions-2025-12-07.txt  entitlements.plist  tauri.conf.json  update_windows_config.py
zig-april-captions-ui/src-tauri/.cargo/: config.toml
zig-april-captions-ui/src-tauri/capabilities/: default.json
zig-april-captions-ui/src-tauri/src/: database.rs  lib.rs  main.rs
zig-april-captions-ui/src/components/: AIPanel.css  AIPanel.tsx  AboutPanel.tsx  CaptionDisplay.css  CaptionDisplay.tsx  CaptionHistory.css  CaptionHistory.tsx  ChatPanel.tsx  ContextMonitor.tsx  ControlBar.css  ControlBar.tsx  HistoryDisplay.css  HistoryDisplay.tsx  InitMeetingModal.tsx  KnowledgePanel.tsx  NoteEditor.tsx  NoteItem.tsx  NotesList.tsx  SettingsPanel.css  SettingsPanel.tsx  SummaryDisplay.css  SummaryDisplay.tsx  TabContainer.css  TabContainer.tsx  TitleBar.tsx  TranscriptionDisplay.css  TranscriptionDisplay.tsx
zig-april-captions-ui/src/constants/: meetingOptions.ts
zig-april-captions-ui/src/hooks/: useCaptions.ts
zig-april-captions-ui/src/services/: contextService.ts  geminiService.ts
zig-april-captions-ui/src/types/: index.ts
zig-april-captions/libs/april-asr/src/windows/: endian.h  (+1 more)
zig-april-captions/libs/miniaudio/: miniaudio_impl.c
zig-april-captions/src/: april.zig  audio.zig  audioqueue.zig  coreaudio.zig  main.zig  miniaudio.zig  processor.zig  pulse.zig  wasapi.zig
zig-april-captions/src/macos/: coreaudio.zig
