[package]
name = "zig-april-captions-ui"
version = "1.0.4"
description = "Real-time speech-to-text captions desktop app"
authors = ["Minh Cong Tran"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zig_april_captions_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }

# SQLite and vector support
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1"

# HTTP client for API calls - use rustls to avoid OpenSSL dependency
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Async stream utilities for SSE parsing
futures-util = "0.3"

# Patch dlopen2_derive to fix Rust compatibility issue
[patch.crates-io]
dlopen2_derive = { git = "https://github.com/OpenByteDev/dlopen2" }

